update edit timekeeping

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -36681,3 +36681,7 @@ readers do not read off random characters that represent icons */
   font-weight: 400;
 }
 
+.form-control.time-picker {
+  width: 7rem;
+}
+
