--- a/resources/sass/library.scss
+++ b/resources/sass/library.scss
@@ -1,4 +1,5 @@
 //sweet alert
+@import "~jquery-timepicker/jquery.timepicker.css";
 @import '~@sweetalert2/theme-bootstrap-4/bootstrap-4.scss';
 @import'~admin-lte/plugins/bootstrap-colorpicker/css/bootstrap-colorpicker.css';
 @import "~admin-lte/plugins/bootstrap-slider/css/bootstrap-slider.css";
